--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>Employee Listing</title>
+    <style>
+      .header {
+        background-color: burlywood;
+      }
+      
   </head>
   
   <body>
