--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
       .header {
         background-color: burlywood;
       }
+      .header img {
+        width: 25%;
+        float: left;
+      }
+      
     </style>
       
   </head>
