--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
         float: left;
         margin: 20px;
       }
-      
+      .header .font {
+        font-size: 10mm;
+        width: 65%;
+        margin-top: 30px;
+        float: left;
+      }
     </style>
       
   </head>
