--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>
       .header {
         background-color: burlywood;
+        overflow: hidden;
       }
       .header img {
         width: 25%;
