--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
       </div>
     </div>
     
-    
+    <!--MENU-->
+    <div class="menu">
+      <ul>
+        <li><a href="index.html">Index</a></li>
+        <li><a href="list.html">List</a></li>
+        <li><a href="login.html">Login</a></li>
+      </ul>
+    </div>
   </body>
 </html>
   
