--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         margin-top: 30px;
         float: left;
       }
+      .menu ul {
+        list-style-type: none;
+        background-color: coral;
+      }
     </style>
       
   </head>
