--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       .menu ul {
         list-style-type: none;
         background-color: coral;
+        margin: 0;
       }
     </style>
       
