--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         list-style-type: none;
         background-color: coral;
         margin: 0;
+        padding: 0;
       }
     </style>
       
