--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         margin: 0;
         padding: 0;
       }
+      .menu li {
+        float: left;
+      }
     </style>
       
   </head>
