--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         background-color: coral;
         margin: 0;
         padding: 0;
+        overflow: hidden;
       }
       .menu li {
         float: left;
