--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       .menu li {
         float: left;
       }
+      .menu a {
+        text-decoration: none;
+        color: cornsilk;
+      }
     </style>
       
   </head>
