--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         text-decoration: none;
         color: cornsilk;
         padding: 20px;
+        display: block;
       }
     </style>
       
