--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         padding: 20px;
         display: block;
       }
+      .menu a:hover {
+        color: black;
+        font-weight: bold;
+        background-color: cornsilk;
     </style>
       
   </head>
