--- a/index.html
+++ b/index.html
@@ -59,6 +59,60 @@
         <li><a href="login.html">Login</a></li>
       </ul>
     </div>
+    
+    <div class="content">
+      <h1>Index</h1>
+      <form action="">
+        <input type="text" width="100px">
+        <input type="button" value="Search">
+        <input type="reset" value="Reset">
+      </form>
+      
+      <table width="70%">
+        <tr>
+          <th>Bil.</th>
+          <th>Nama</th>
+          <th>Jantina</th>
+          <th>Jabatan</th>
+          <th>Gaji</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Muhammad Abu</td>
+          <td>Lelaki</td>
+          <td>Perniagaan</td>
+          <td>RM1500</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Muhammad Ali</td>
+          <td>Lelaki</td>
+          <td>Komputer</td>
+          <td>RM1701</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Nurul Timah</td>
+          <td>Perempuan</td>
+          <td>Perniagaan</td>
+          <td>RM2002</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Siti Semah</td>
+          <td>Perempuan</td>
+          <td>Perniagaan</td>
+          <td>RM1500</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>Nur Zila</td>
+          <td>Perempuan</td>
+          <td>Komputer</td>
+          <td>RM1701</td>
+        </tr>
+      </table>
+    </div>
   </body>
 </html>
   
