--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         color: black;
         font-weight: bold;
         background-color: cornsilk;
+      }
+      .content h1 {
+        margin: 10px;
+        text-align: center;
+      }
     </style>
       
   </head>
