--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         margin: 10px;
         text-align: center;
       }
+      .content form {
+        text-align: center;
+      }
     </style>
       
   </head>
