--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
       .content form {
         text-align: center;
       }
+      .content table {
+        border: solid 3px;
+        margin: auto;
+        width: 70%;
+      }
     </style>
       
   </head>
