--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         margin: auto;
         width: 70%;
       }
+      .content td, th {
+        border: solid 1px;
+        text-align: center;
+      }
     </style>
       
   </head>
