--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
         </tr>
       </table>
     </div>
+    
+    <!--FOOTER-->
+    <div class="kaki">
+      <font>Copyright &copy; Syarikat ABC, 2021</font>
+    </div>
   </body>
 </html>
   
