--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
         border: solid 1px;
         text-align: center;
       }
+      .kaki {
+        text-align: center;
+        border: solid black;
+        background-color: burlywood;
+        padding: 10px;
+        margin-top: 20px;
+      }
+      * {
+        box-sizing: content-box;
+        margin: 0;
+      }
     </style>
       
   </head>
