--- a/list.html
+++ b/list.html
@@ -1,1 +1,40 @@
-
+<html>
+  <head>
+    <title>Employee Listing</title>
+    <style>
+      .header {
+        background-color: burlywood;
+        overflow: hidden;
+      }
+      .header img {
+        width: 25%;
+        float: left;
+        margin: 20px;
+      }
+      .header .font {
+        font-size: 10mm;
+        width: 65%;
+        margin-top: 30px;
+        float: left;
+      }
+      .menu ul {
+        list-style-type: none;
+        background-color: coral;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+      .menu li {
+        float: left;
+      }
+      .menu a {
+        text-decoration: none;
+        color: cornsilk;
+        padding: 20px;
+        display: block;
+      }
+      .menu a:hover {
+        color: black;
+        font-weight: bold;
+        background-color: cornsilk;
+      }
