--- a/list.html
+++ b/list.html
@@ -38,6 +38,10 @@
         font-weight: bold;
         background-color: cornsilk;
       }
+      .content h1 {
+        margin: 10px;
+        text-align: center;
+      }
       </style>
       
   </head>
