--- a/list.html
+++ b/list.html
@@ -77,6 +77,13 @@
             <li>Siti Semah</li>
           </ol>
         </ul>
+        <ul>
+          <li>Komputer</li>
+          <ol>
+            <li>Muhammad Ali</li>
+            <li>Nur Zila</li>
+          </ol>
+        </ul>
     </div>
     
       </body>
