--- a/login.html
+++ b/login.html
@@ -85,3 +85,17 @@
     
     <div class="content">
       <h1>Login</h1>
+      <form action="">
+        Username <input type="text" width="100px">
+        <br>Passwords <input type="text">
+        <br><input type="button" value="Login">
+        <input type="reset" value="Reset">
+      </form>
+    </div>
+    
+    <!--FOOTER-->
+    <div class="kaki">
+      <font>Copyright &copy; Syarikat ABC, 2021</font>
+    </div>
+  </body>
+</html>
