--- a/login.html
+++ b/login.html
@@ -48,6 +48,17 @@
         margin: 10px;
         text-align: center;
       }
+      .content form {
+        margin: 10px;
+        margin: auto;
+        width: 50%;
+        padding: 10px;
+        text-align: center;
+        border: solid 3px;
+      }
+      .content input {
+        margin: 5px;
+      }
       .kaki {
         text-align: center;
         border: solid black;
